...
            android:text="@string/diaryapp"
            android:textColor="@color/black"
            android:textSize="30sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_main_write"
        style="@style/buttonstyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_inner"
        android:padding="15dp"
        android:text="@string/btnwrite" />
...
